# revX-algotrader

./: .gitignore  .prettierignore  .prettierrc  LICENSE  README.md  package.json
backend/: Cargo.toml  Makefile  deny.toml  rustfmt.toml
backend/.cargo/: config.toml
backend/scratch/: check_active.py  test_api.py
backend/src/: lib.rs
backend/src/api/: auth.rs  client.rs  mod.rs  proxy.rs
backend/src/core/: config.rs  db.rs  mod.rs  models.rs  sync.rs
backend/src/core/notifiers/: mod.rs  ntfy.rs
backend/src/strategies/dummy/: engine.rs  strategy.rs
backend/tests/: ct.rs  e2e.rs  mock_server.rs  ut.rs
backend/tests/ct/: dummy.rs
backend/tests/ut/: auth.rs  client.rs  config.rs  engines.rs  integration.rs  models.rs  proxy.rs  sync.rs
frontend/: eslint.config.mjs  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.vue  router.ts  store.ts  style.css
frontend/src/views/: DashboardView.vue  OrdersView.vue  TradesView.vue
frontend/tests/: setup.ts
frontend/tests/ut/: formatCurrency.test.ts  formatTime.test.ts  store.test.ts
